--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -335,6 +335,9 @@
 			padding: 20px;
 			padding-left: 0px;
 			@include transition();
+			@media (min-width: 1921px) {
+				padding-left: 20px;
+			}
 			@media (max-width: 767px) {
 				padding-left: 20px;
 			}
